consumer/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: consumer
  labels:
    istio-injection: enabled
