consumer/templates/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consumer-service
  name: consumer-service
  namespace: consumer
spec:
  selector:
    app: cve-consumer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
