consumer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: consumer
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
      name: postgres
  selector:
    app: postgres
