consumer/templates/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: consumer
  labels:
    app: postgres

spec:
  serviceName: postgres
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5432
        volumeMounts:
        - name: postgres-dbdata
          mountPath: /data
        resources:
          requests:
            cpu: "100m"
        # readinessProbe:
        #   exec:
        #     command: ["pg_isready", "-U", "postgres"]
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
      volumes:
      - name: postgres-dbdata
        persistentVolumeClaim:
          claimName: postgres-db-ebs-pvc 

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-virtualservice
  namespace: consumer
spec:
  hosts:
  - "postgres.consumer.svc.cluster.local"
  http:
  - route:
    - destination:
        host: postgres-0
        port:
          number: 5432
