consumer/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consumer-virtualservice
  namespace: consumer
spec:
  hosts:
  - consumer-service
  tcp:
  - match:
    - port: 80
    route:
    - destination:
        host: consumer-service
        port:
          number: 80
